Fixes rendering glitch on Firefox.

--- a/source/sass/partials/_site_header_preload.scss
+++ b/source/sass/partials/_site_header_preload.scss
@@ -58,6 +58,7 @@
 	justify-content: flex-end;
 	list-style-type: none;
 	margin:0 rem(10) 0 0;
+	flex-grow:2;
 	@media screen and (max-width:em(560)) {
 		flex-direction: column;
 		height:0;
